--- a/client/src/styles/about.scss
+++ b/client/src/styles/about.scss
@@ -1,7 +1,8 @@
 @import "variables";
 
 .container {
-    margin-top: 35px;
+    margin-top: 135px;
+    height: 100vh;
     // background-color: $Naranja;
     // padding: 30px;
 
