--- a/client/src/styles/landing.scss
+++ b/client/src/styles/landing.scss
@@ -8,7 +8,8 @@
     justify-content: center;
     align-items: center;
     background-color: $Naranja;
-// height: 100vh;
+height: 100vh;
+width: 100vw;
 
 }
 
@@ -29,8 +30,8 @@
             
             
             .img{
-                width: 600px;
-                height: 350px;
+                width: 460px;
+                height: 250px;
                 margin-left: 60px;
                 margin-top: 60px;
             }
@@ -43,8 +44,8 @@
                     background-color: $Brown;
                     border: none;
                     border-radius: 10px;
-                    width: 200px;
-                    height: 40px;
+                    width: 250px;
+                    height: 50px;
                     color: $White;
                     font-size: 18px;
                     margin-top: 70px;
