--- a/client/src/styles/contact.scss
+++ b/client/src/styles/contact.scss
@@ -7,7 +7,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+background-color: $Naranja;
     h1{
         font-size: 50px;
         width: 60vw;
