--- a/client/src/styles/about.scss
+++ b/client/src/styles/about.scss
@@ -1,9 +1,10 @@
 @import "variables";
 
 .container {
-    margin-top: 135px;
+    margin-top: 100px;
+    width: 100vw;
     height: 100vh;
-    // background-color: $Naranja;
+  
     // padding: 30px;
 
     .img-villas {
@@ -14,8 +15,8 @@
     .nosotros {
         border-radius: 1em;
         border: 3px solid $Black;
-        margin-top: 50px;
-        background-color: $White;
+        margin-top: 20px;
+        background-color: $Naranja;
         padding: 30px;
         margin-bottom: 40px;
 
