--- a/client/src/styles/about.scss
+++ b/client/src/styles/about.scss
@@ -14,11 +14,13 @@
 
     .nosotros {
         border-radius: 1em;
-        border: 3px solid $Black;
-        margin-top: 20px;
-        background-color: $Naranja;
+        border: 3px solid $Naranja;
+        // margin-top: 20px;
+        background-color: $White;
         padding: 30px;
-        margin-bottom: 40px;
+        // margin-bottom: 40px;
+        margin: 10px 10px 40px 10px;
+        width: 20em;
 
         p {
             margin-top: 0px;
@@ -34,18 +36,14 @@
     .container {
         margin-top: 80px;
 
-        .img-villas {
-            width: 100%;
-            height: 80%;
-        }
-
         .nosotros {
             border-radius: 1em;
-            border: 3px solid $Black;
+            border: 3px solid $Naranja;
             margin-top: 50px;
             background-color: $White;
             padding: 30px;
             margin-bottom: 40px;
+            width: 80em;
 
             p {
                 margin-top: 0px;
@@ -53,6 +51,12 @@
 
 
         }
+
+        .img-villas {
+            width: 100%;
+            height: 80%;
+        }
+
     }
 
 }
