--- a/client/src/styles/landing.scss
+++ b/client/src/styles/landing.scss
@@ -1,131 +1,157 @@
 @import "variables";
 
-.container-landing {
-    position: absolute;
-    top: 70px;
-    left: 11px;
-    margin-right: 0px;
-        
-            h1{
-                color: $White;
-                font-size: 60px;
-                font-weight: 500;
-                text-align: center;
-            }
-
-            
-            
-            .img{
-                width: 460px;
-                height: 250px;
-                margin-left: 60px;
-                margin-top: 60px;
-            }
-            .container-btn{
-                display: flex;
-                justify-content: center;
-                margin-top: 50px;
-
-                .btn-contact{
-                    background-color: $Brown;
-                    border: none;
-                    border-radius: 10px;
-                    width: 250px;
-                    height: 50px;
-                    color: $White;
-                    font-size: 18px;
-                    margin-top: 70px;
-                    
-                }
-                
-            }
-                
-        }
-        p{
-            font-size: 30px;
-            color: $Black;
-            margin-top: 40px;
-            text-align: center;
-            font-weight: 500;
-        }
-    
-    
-
-.fondo{
-    height: 100vh;
-    width: 100vw;
-    // padding: 100px;
-}
-
-
-
-
-@media (min-width: 1199px){ //Desktop
-.mainContainer{
-    padding: 0px;
-    margin: 0px;
+.mainContainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: $Naranja;
-    // height: 100vh;
+    height: 100vh;
+    width: 100vw;
 
+    .fondo {
+        height: 100vh;
+        width: 100vw;
+    }
 }
 
 .container-landing {
-        position:absolute;
-        top:150px;
-        left: 30px;
-margin-right: 0px;
-       
-        
-            h1{
-                color: $White;
-                font-size: 60px;
-                font-weight: 500;
-            }
+    position: absolute;
+    top: 70px;
+    left: 11px;
+    margin-right: 0px;
 
-            
-            
-            .img{
-                width: 500px;
-                height: 280px;
-                margin-left: 100px;
-            }
-            .container-btn{
-                display: flex;
-                justify-content: center;
-                margin-top: 30px;
+    .contentLetras {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
-                .btn-contact{
-                    background-color: $Brown;
-                    border: none;
-                    border-radius: 10px;
-                    width: 200px;
-                    height: 40px;
-                    color: $White;
-                    font-size: 18px;
-                    margin-top: 20px;
-                    
-                }
-                
-            }
-                
+        h1 {
+            color: $White;
+            font-size: 34px;
+            font-weight: 500;
+            text-align: center;
+            width: 80vw;
         }
-        p{
-            font-size: 30px;
+
+        .ven {
+            font-size: 23px;
             color: $Black;
             margin-top: 40px;
+            text-align: center;
+            font-weight: 500;
+            width: 80vw;
+        
         }
-    
-    
+    }
 
-.fondo{
-    height: 100vh;
-    width: 100vw;
-    // padding: 100px;
+    .img {
+        width: 200px;
+        height: 150px;
+        margin-top: 0px;
+    }
+
+    .container-btn {
+        display: flex;
+        justify-content: center;
+        margin-top: 0px;
+
+        .btn-contact {
+            background-color: $Brown;
+            border: none;
+            border-radius: 10px;
+            width: 200px;
+            height: 30px;
+            color: $White;
+            font-size: 18px;
+            margin-top: 70px;
+
+        }
+
+    }
+
 }
+
+
+
+
+
+//-----------------------//-------------///
+@media (min-width: 1199px) { //Desktop
+    .mainContainer {
+        padding: 0px;
+        margin: 0px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: $Naranja;
+
+        .fondo {
+            height: 100vh;
+            width: 100vw;
+        }
+    }
+
+    .container-landing {
+        position: absolute;
+        top: 150px;
+        left: 30px;
+        margin-right: 0px;
+
+        .contentLetras {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        
+            h1 {
+                color: $White;
+                    font-size: 60px;
+                    font-weight: 500;
+                    width: 50vw;
+            }
+        
+            .ven {
+                font-size: 30px;
+                color: $Black;
+                margin-top: 40px;
+                width: 50vw;
+            
+            }
+        }
+      
+
+
+
+        .img {
+            width: 500px;
+            height: 280px;
+            margin-left: 100px;
+        }
+
+        .container-btn {
+            display: flex;
+            justify-content: center;
+            margin-top: 30px;
+
+            .btn-contact {
+                background-color: $Brown;
+                border: none;
+                border-radius: 10px;
+                width: 200px;
+                height: 40px;
+                color: $White;
+                font-size: 18px;
+                margin-top: 20px;
+
+            }
+
+        }
+
+    }
+
+    
+   
 
 }
 
