--- a/client/src/styles/contact.scss
+++ b/client/src/styles/contact.scss
@@ -9,11 +9,10 @@
     align-items: center;
 background-color: $Naranja;
     h1{
-        font-size: 50px;
-        width: 60vw;
-        text-align: center;
-        color: $White;
-        // margin-bottom: 80px;
+        font-size: 36px;
+    width: 77vw;
+    text-align: center;
+    color: White;
     }
 
     .phoneContainer{
@@ -35,4 +34,44 @@ background-color: $Naranja;
         }
     }
     
+}
+
+
+@media (min-width: 1199px) { //Desktop
+    .contactContainer{
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    background-color: $Naranja;
+        h1{
+            font-size: 50px;
+            width: 60vw;
+            text-align: center;
+            color: $White;
+            // margin-bottom: 80px;
+        }
+    
+        .phoneContainer{
+            width: 100%;
+            height: 10%;
+            background-color: $White;        
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+    
+            .whats{
+                font-size: 35px;
+                margin-right: 10px;
+            }
+            span{
+                font-size: 35px;
+                font-weight: 600;
+            }
+        }
+        
+    }
 }
