--- a/client/src/styles/landing.scss
+++ b/client/src/styles/landing.scss
@@ -46,15 +46,15 @@
     }
 
     .img {
-        width: 250px;
+        width: 300px;
         height: 200px;
-        margin-top: 40px;
+        // margin-top: 40px;
     }
 
     .container-btn {
         display: flex;
         justify-content: center;
-        margin-top: 0px;
+        margin-top: -35px;
 
         .btn-contact {
             background-color: $Brown;
