--- a/client/src/styles/sucursales.scss
+++ b/client/src/styles/sucursales.scss
@@ -21,13 +21,16 @@
         justify-content: space-between;
         align-items: center;
         margin-top: 92px;
+        border-radius: 1em;
 
         .img-condesa {
             width: 87vw;
             height: 40vh;
-            padding: 10px;
-            margin-left: 10px;
+            // margin-left: 10px;
             margin-top: 10px;
+            border-radius: 2em;
+            border: solid 5px $White;
+
         }
 
         .ubi-condesa {
@@ -37,12 +40,18 @@
             flex-direction: column;
             justify-content: flex-start;
             align-items: center;
-
+h1{
+    text-decoration:underline;
+    font-weight: 500;
+    margin-top: 10px;
+}
             p{
                 text-align: center;
                 font-size: 18px;
                 margin-top: 10px;
                 width: 60vw;
+                color: $White;
+                font-weight: 500;
             }
             .maps{
                 width: 300px;
@@ -55,7 +64,6 @@
 
 @media (min-width: 1199px){ //Desktop
     .white-box {
-        // position:absolute;
         display: flex;
         justify-content: flex-start;
         flex-direction: column;
@@ -63,24 +71,38 @@
         background-color: $White;
         height: 100vh;
         width: 100vw;
-        top: 180px;
+        top: 80px;
+        bottom: 180px;
+        
     
         .puesto1 {
             width: 90vw;
-            height: 70vh;
+            height: 80vh;
             background-color: $Naranja;
             display: flex;
             flex-direction: row;
             justify-content: space-between;
             align-items: center;
             margin-top: 150px;
+            border-radius: 1em;
+           
     
     
             .img-condesa {
-                width: 50vw;
-                height: 60vh;
-                padding: 10px;
-                margin-left: 10px;
+                width: 40vw;
+                height: 50vh;
+                // padding: 10px;
+                margin-left: 30px;
+                border-radius: 2em;
+            }
+
+            .img-condesa:hover {
+                margin-left: 40px;
+                -webkit-transform:scale(1.1);
+                transform:scale(1.1);
+                border-radius: 2em;
+                border: solid 5px $White;
+
             }
     
             .ubi-condesa {
@@ -90,12 +112,20 @@
                 flex-direction: column;
                 justify-content: flex-start;
                 align-items: center;
+
     
                 p{
                     text-align: center;
                     font-size: 18px;
                     margin-top: 10px;
                     width: 40vw;
+                    color: $White;
+                }
+                .maps{
+                    width: 600px;
+                     height: 200px;
+                border-radius: 2em;
+
                 }
             }
         }
