--- a/client/src/styles/about.scss
+++ b/client/src/styles/about.scss
@@ -4,23 +4,20 @@
     margin-top: 100px;
     width: 100vw;
     height: 100vh;
-  
-    // padding: 30px;
-
     .img-villas {
         width: 100%;
-        height: 80%;
+        height: 100%;
+        border-radius: 1em;
     }
 
     .nosotros {
         border-radius: 1em;
-        border: 3px solid $Naranja;
-        // margin-top: 20px;
+        // border: 3px solid $Naranja;
         background-color: $White;
         padding: 30px;
-        // margin-bottom: 40px;
         margin: 10px 10px 40px 10px;
         width: 20em;
+        box-shadow: 3px 3px 3px 2px $Naranja;
 
         p {
             margin-top: 0px;
@@ -32,7 +29,8 @@
 
 
 
-@media (min-width: 1199px) { //Desktop
+@media (min-width: 1199px) {  //Desktop
+
     .container {
         margin-top: 80px;
 
