--- a/client/src/styles/contact.scss
+++ b/client/src/styles/contact.scss
@@ -1,77 +1,89 @@
 @import "variables";
 
-.contactContainer{
+.contactContainer {
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-background-color: $Naranja;
-    h1{
+    background-color: $Naranja;
+
+    h1 {
         font-size: 36px;
-    width: 77vw;
-    text-align: center;
-    color: White;
+        width: 77vw;
+        text-align: center;
+        color: White;
     }
 
-    .phoneContainer{
+    .phoneContainer {
         width: 100%;
         height: 10%;
-        background-color: $White;        
+        background-color: $White;
         text-align: center;
         display: flex;
         justify-content: center;
         align-items: center;
 
-        .whats{
+        .whats {
             font-size: 35px;
             margin-right: 10px;
         }
-        span{
+
+        span {
             font-size: 35px;
             font-weight: 600;
         }
     }
-    
+
+    ._2qp0Z {
+        bottom: 70px;
+        width: 85px;
+        height: 83px;
+        font-size: 3em;
+    }
 }
 
 
-@media (min-width: 1199px) { //Desktop
-    .contactContainer{
+@media (min-width: 1199px) {
+
+    //Desktop
+    .contactContainer {
         width: 100vw;
         height: 100vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-    background-color: $Naranja;
-        h1{
+        background-color: $Naranja;
+
+        h1 {
             font-size: 50px;
             width: 60vw;
             text-align: center;
             color: $White;
             // margin-bottom: 80px;
         }
-    
-        .phoneContainer{
+
+        .phoneContainer {
             width: 100%;
             height: 10%;
-            background-color: $White;        
+            background-color: $White;
             text-align: center;
             display: flex;
             justify-content: center;
             align-items: center;
-    
-            .whats{
+
+            .whats {
                 font-size: 35px;
                 margin-right: 10px;
             }
-            span{
+
+            span {
                 font-size: 35px;
                 font-weight: 600;
             }
         }
-        
+
     }
 }
