--- a/client/src/styles/sucursales.scss
+++ b/client/src/styles/sucursales.scss
@@ -22,12 +22,13 @@
         align-items: center;
         margin-top: 92px;
         border-radius: 1em;
-
+        box-shadow: 3px 3px 3px 2px gray;
+        
         .img-condesa {
-            width: 87vw;
-            height: 40vh;
+            width: 80vw;
+            height: 30vh;
             // margin-left: 10px;
-            margin-top: 10px;
+            margin-top: 20px;
             border-radius: 2em;
             border: solid 5px $White;
 
@@ -40,29 +41,34 @@
             flex-direction: column;
             justify-content: flex-start;
             align-items: center;
-h1{
-    text-decoration:underline;
-    font-weight: 500;
-    margin-top: 10px;
-}
-            p{
+
+            h1 {
+                text-decoration: underline;
+                font-weight: 500;
+                margin-top: 10px;
+            }
+
+            p {
                 text-align: center;
                 font-size: 18px;
                 margin-top: 10px;
                 width: 60vw;
                 color: $White;
-                font-weight: 500;
+                font-weight: 600;
             }
-            .maps{
+
+            .maps {
                 width: 300px;
-                 height: 200px
+                height: 200px
             }
         }
     }
 }
 
 
-@media (min-width: 1199px){ //Desktop
+@media (min-width: 1199px) {
+
+    //Desktop
     .white-box {
         display: flex;
         justify-content: flex-start;
@@ -73,8 +79,8 @@ h1{
         width: 100vw;
         top: 80px;
         bottom: 180px;
-        
-    
+
+
         .puesto1 {
             width: 90vw;
             height: 80vh;
@@ -85,9 +91,9 @@ h1{
             align-items: center;
             margin-top: 150px;
             border-radius: 1em;
-           
-    
-    
+
+
+
             .img-condesa {
                 width: 40vw;
                 height: 50vh;
@@ -98,13 +104,13 @@ h1{
 
             .img-condesa:hover {
                 margin-left: 40px;
-                -webkit-transform:scale(1.1);
-                transform:scale(1.1);
+                -webkit-transform: scale(1.1);
+                transform: scale(1.1);
                 border-radius: 2em;
                 border: solid 5px $White;
 
             }
-    
+
             .ubi-condesa {
                 // background-color: red;
                 width: 70vw;
@@ -113,18 +119,19 @@ h1{
                 justify-content: flex-start;
                 align-items: center;
 
-    
-                p{
+
+                p {
                     text-align: center;
                     font-size: 18px;
                     margin-top: 10px;
                     width: 40vw;
                     color: $White;
                 }
-                .maps{
+
+                .maps {
                     width: 600px;
-                     height: 200px;
-                border-radius: 2em;
+                    height: 200px;
+                    border-radius: 2em;
 
                 }
             }
